// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tile 1`] = `
<div
  className=""
>
  <div
    className="flex gap-1"
  >
    <h4
      className="relative text-zinc-950 font-semibold pb-4 text-lg"
    >
      Test Title
    </h4>
  </div>
  Tile
</div>
`;

exports[`Tile with class name 1`] = `
<div
  className=" test-class"
>
  <div
    className="flex gap-1"
  >
    <h4
      className="relative text-zinc-950 font-semibold pb-4 text-lg"
    >
      Test Title
    </h4>
  </div>
  Tile with class name
</div>
`;
